# robotics

./: .gitignore  CLEANUP_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  HUMANOID_MODEL_GUIDE.md  Milestone1_RoboticHand.pptx  RANDOMIZE_FIXED.md  README.md  index.html  joystick.html  launch_arm_sim.sh  start.sh  test_randomize.sh
.github/instructions/: simulation.instructions.md
src/SMARTmBOT/: CMakeLists.txt  README.md  package.xml
src/SMARTmBOT/launch/: smartmbot_launch.py
src/SMARTmBOT/src/: smartmbot_node.cpp
src/SMARTmBOT_description/: CMakeLists.txt  README.md  package.xml
src/SMARTmBOT_description/models/smartmbot/: model.config  model.sdf
src/SMARTmBOT_description/urdf/: smartmbot.urdf.xacro
src/SMARTmBOT_gazebo/: CMakeLists.txt  README.md  package.xml
src/SMARTmBOT_gazebo/config/: bridge_config.yaml
src/SMARTmBOT_gazebo/launch/: smartmbot_bringup.launch.py  smartmbot_simulation.launch.py
src/SMARTmBOT_gazebo/worlds/: smartmbot_world.sdf
src/arm_simulation/: CMakeLists.txt  README.md  SPEECH_RECOGNITION_SETUP.md  package.xml  requirements.txt
src/arm_simulation/launch/: dual_hands.launch.py  humanoid_robot.launch.py  humanoid_upper_body.launch.py  robotic_hand.launch.py  speech_to_gesture.launch.py  test_gestures.launch.py  test_rviz_visualization.launch.py  view_arm.launch.py
src/arm_simulation/rviz/: dual_hands.rviz  humanoid_robot.rviz  humanoid_simple.rviz  humanoid_upper_body.rviz  robotic_hand.rviz  speech_to_gesture.rviz  ur5_arm.rviz
src/arm_simulation/scripts/: asl_body_postures.py  asl_mapper.py  audio_visual_feedback.py  body_controller.py  debug_rviz.py  demo_text_mode.sh  dual_hand_coordinator.py  enhanced_hand_controller.py  gesture_sequencer.py  hand_controller.py  humanoid_sign_coordinator.py  random_pose_publisher.py  setup_speech_recognition.sh  speech_recognition_node.py  speech_to_gesture_coordinator.py  speech_to_gesture_demo.py  system_tester.py  test_hand.py
src/arm_simulation/urdf/: dual_robotic_hands.urdf.xacro  humanoid_full_body.urdf.xacro  humanoid_robot.urdf.xacro  humanoid_simple.urdf.xacro  humanoid_upper_body.urdf.xacro  robotic_hand.urdf.xacro
src/red_box_car/: README.md  package.xml  setup.cfg  setup.py
src/red_box_car/config/: red_box_car.rviz
src/red_box_car/launch/: gazebo_simulation.launch.py  keyboard_teleop.launch.py  red_box_car_rviz.launch.py  robot_visualization.launch.py
src/red_box_car/red_box_car/: camera_simulator.py  camera_viewer.py  keyboard_teleop.py  movement_tester.py  navigation_controller.py  pickup_controller.py  pickup_test.py  red_box_spawner.py  red_box_tracker.py
src/red_box_car/urdf/: floor.urdf  red_box.urdf  red_box_car.urdf  red_box_car_simple.urdf
src/red_box_car/worlds/: car_world.sdf
src/warehouse_robot/: CMakeLists.txt  README_SCRIPTS.md  ReadME.md  package.xml  setup.py
src/warehouse_robot/config/: control.yaml  joystick_plugin.config
src/warehouse_robot/launch/: custom_warehouse.launch.py  warehouse_simulation.launch.py  warehouse_with_controls.launch.py  warehouse_with_joystick.launch.py  warehouse_with_pickup.launch.py
src/warehouse_robot/rviz/: warehouse_robot.rviz
src/warehouse_robot/scripts/: auto_drive_to_package.py  car_controller.py  generate_new_waypoints.py  generate_waypoints.py  keyboard_controller.py  manual_robot_controller.py  mission_log_manager.py  package_collision_handler.py  robot_controller.py  show_waypoints.py  simple_robot_test.py  test_robot_movement.py  waypoints.txt  web_joystick_controller.py
src/warehouse_robot/urdf/: warehouse_robot.urdf.xacro
src/warehouse_robot/warehouse_robot/: move_robot.py  robot_controller.py
src/warehouse_robot/worlds/: warehouse_world.sdf
