<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_simulation</name>
  <version>0.0.0</version>
  <description>UR5 Robot Arm Simulation - Launch package for Universal Robots UR5 6-DOF industrial robotic arm visualization and control</description>
  <maintainer email="ravali@todo.todo">ravali</maintainer>
  <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- UR5 Robot Description -->
  <depend>ur_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
