<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_simulation</name>
  <version>0.0.1</version>
  <description>Speech-to-Gesture Assistive Technology - Robotic hand simulation with ASL translation for deaf community</description>
  <maintainer email="ravali@example.com">ravali</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>

  <!-- Python dependencies for speech recognition -->
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-speechrecognition</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>