<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_robot</name>
  <version>0.0.0</version>
  <description>Warehouse robot simulation with dropping car in Gazebo</description>
  <maintainer email="ravalimukkavilli@gmail.com">ravali</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
